--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mesh-baked-material",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A material for ThreeJS that allows you to combine the baked lighting from a MeshBasicMaterial, with the specular highlights of MeshStandardMaterial.",
   "main": "dist/MeshBakedMaterial.js",
   "scripts": {},
@@ -9,8 +9,10 @@
     "url": "git+https://github.com/lukeschaefer/MeshBakedMaterial.git"
   },  
   "files": [
-    "dist/MeshBakedMaterial.js"
+    "dist/MeshBakedMaterial.js",
+    "dist/types/MeshBakedMaterial.d.ts"
   ],  
+  "types": "dist/types/MeshBakedMaterial.d.ts",
   "keywords": [
     "threejs",
     "baked",
